syntax = "proto3";
import "database.proto";
package proto;

service UserService {
    rpc FindOneByID(DatabaseID) returns (DatabaseResponse) {}
    rpc FindManyByID(DatabaseIDs) returns (DatabaseResponse) {}

    rpc FindOneByUsername(DatabaseString) returns (DatabaseResponse) {}
    rpc FindManyByUsername(DatabaseStrings) returns (DatabaseResponse) {}

    rpc FindOneByEmail(DatabaseString) returns (DatabaseResponse) {}
    rpc FindManyByEmail(DatabaseStrings) returns (DatabaseResponse) {}
}